<resources>
    <string name="app_name">AndroidProject</string>
    <string name="phoneload">手机号登陆</string>
    <string name="dress">国家/地区&#160;&#160;&#160;中国大陆</string>
    <string name="kuohao"> > </string>
    <string name="phone86">+86&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="phonetext">请填写手机号码&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="text">用微信号/QQ号/邮箱登陆</string>
    <string name="load_text">下一步</string>
    <string name="text1">找回密码&#160;|</string>
    <string name="text2">更多选项</string>
    <string name="phone">手机号&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;+86&#160;&#160;</string>
    <string name="password">密码&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="passwordtext">请填写密码&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="load_text2">登陆</string>
    <string name="text22">用短信验证码登陆</string>
    <string name="find_psd">找回密码</string>
    <string name="qianwangweixin">前往微信安全中心</string>
    <string name="quxiao">取消</string>
    <string name="weixin">微信</string>
    <string name="sousuo">搜索</string>
    <string name="tongxunlu">通讯录</string>
    <string name="faxian">发现</string>
    <string name="wo">我</string>
    <string name="pay">支付</string>
    <string name="shezhi">设置</string>
    <string name="xinpengyou">新的朋友</string>
    <string name="shoucang">收藏</string>
    <string name="xiangce">相册</string>
    <string name="kabao">卡包</string>
    <string name="biaoqing">表情</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="saoyisao">扫一扫</string>
    <string name="xiaochengxu">小程序</string>
    <string name="qunliao">群聊</string>
    <string name="biaoqian">标签</string>
    <string name="gongzhonghao">公众号</string>
    <string name="A">A</string>
    <string name="haonanren">A 好男人</string>
    <string name="asans">啊三</string>
    <string name="B">B</string>
    <string name="buliangshaonian">不良少年</string>
    <string name="info">聊天信息</string>
    <string name="nicheng">好友昵称</string>
    <string name="update">修改</string>
    <string name="jilu">记录</string>
    <string name="returns">返回</string>
</resources>
