<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.massz.www.androidproject.phone"
    android:orientation="vertical"
    android:background="@color/body">

    <ImageView
        android:id="@+id/exit"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/exit"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="18dp"
        />
    <TextView
        android:id="@+id/tx1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phoneload"
        android:textColor="@color/block"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tx2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/dress"
        android:textColor="@color/block"
        android:textSize="15sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"/>
    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kuohao"
        android:textSize="30sp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="96dp"
        android:textColor="@color/kuohao"
        />-->
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="110dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_height="32dp"/>
</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone86"
        android:textSize="16sp"
        android:textColor="@color/block"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/border"
        />
    <EditText
        android:id="@+id/et_ph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phonetext"
        android:textSize="16sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/shape"
        android:paddingLeft="8dp"
        />
</LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:textSize="12sp"
        android:textColor="@color/textcol"/>
    <Button
        android:id="@+id/btn_login1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:background="@color/load_bg"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:text="@string/load_text"
        android:textColor="@color/load_text"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp"
        android:layout_marginLeft="125dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textSize="12sp"
            android:textColor="@color/text12"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:layout_marginLeft="5dp"
            android:textSize="12sp"
            android:textColor="@color/text12"/>
    </LinearLayout>

</LinearLayout>
