<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="#000"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <ImageView
            android:id="@+id/img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#000"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nicheng"
            android:textSize="24sp"
            />
        <EditText
            android:id="@+id/et1"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:background="@null"
            android:layout_height="40dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jilu"
            android:textSize="24sp"
            />
        <EditText
            android:id="@+id/et2"
           android:layout_marginLeft="2dp"
            android:layout_width="match_parent"
            android:background="@null"
            android:layout_height="40dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"/>
    <Button
        android:id="@+id/btn2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/returns"/>
</LinearLayout>

