<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.massz.www.androidproject.phone"
    android:orientation="vertical"
    android:background="@color/body">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/sreturn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="18dp"
            android:src="@drawable/sreturn"
            />
        <ImageView
            android:id="@+id/more"
            android:layout_width="26dp"
            android:layout_marginTop="15dp"
            android:layout_height="24dp"
            android:layout_marginLeft="268dp"
            android:src="@drawable/moree"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tx1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phoneload"
        android:textColor="@color/block"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/tx2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/block"
            android:textSize="17sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/phone_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="4dp"
            android:textColor="@color/block"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp"
            android:textColor="@color/block"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/border"
            />
        <EditText
            android:id="@+id/et_psd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordtext"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/shape"
            android:paddingLeft="8dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text22"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:textSize="12sp"
        android:textColor="@color/textcol"/>
    <Button
        android:id="@+id/btn_login2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:background="@color/load_bg"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:text="@string/load_text2"
        android:textColor="@color/load_text"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp"
        android:layout_marginLeft="125dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textSize="12sp"
            android:textColor="@color/text12"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:layout_marginLeft="5dp"
            android:textSize="12sp"
            android:textColor="@color/text12"/>
    </LinearLayout>

</LinearLayout>
