<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <!--<TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tongxunlu"
        android:textSize="21sp"
        android:textColor="#aaddcc"
        android:layout_gravity="center"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F3F3F2"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:paddingBottom="10dp"
            android:paddingTop="12dp"
            android:text="@string/tongxunlu"
            android:textColor="@color/block"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/jiahaoyou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:src="@drawable/jiahaoyou" />
        <!--android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_search_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F3F3F2"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/home_header">

        <EditText
            android:background="@drawable/shapesousuo2"
            android:id="@+id/sousuo"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/sousuo"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/sousuo"
            android:textSize="14sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#ffffff"
        android:layout_marginTop="4dp">
        <ImageView
            android:layout_width="41dp"
            android:layout_height="45dp"
            android:src="@drawable/xinpengyou"
            />
        <TextView
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:text="@string/xinpengyou"
            android:textColor="@color/block"
            android:textSize="18sp"
            android:layout_marginLeft="11dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:background="#F3F3F2">
    </LinearLayout>
    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="4dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:src="@drawable/qunliao"
            />
        <TextView
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:text="@string/qunliao"
            android:textColor="@color/block"
            android:textSize="18sp"
            android:layout_marginLeft="11dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:background="#F3F3F2">
    </LinearLayout>
    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="4dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:src="@drawable/biaoqian"
            />
        <TextView
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:text="@string/biaoqian"
            android:textColor="@color/block"
            android:textSize="18sp"
            android:layout_marginLeft="11dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:background="#F3F3F2">
    </LinearLayout>
    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="4dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:src="@drawable/gongzhonghao"
            />
        <TextView
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:text="@string/gongzhonghao"
            android:textColor="@color/block"
            android:textSize="18sp"
            android:layout_marginLeft="11dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:background="#F3F3F2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/A"
            android:textSize="18sp"
            android:layout_marginLeft="26dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:background="#ffffff">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:src="@drawable/tu10"
            />
        <TextView
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:text="@string/haonanren"
            android:textColor="@color/block"
            android:textSize="18sp"
            android:layout_marginLeft="12dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="1dp"
        android:background="#F3F3F2">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:background="#ffffff">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:src="@drawable/tu9"
            />
        <TextView
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:text="@string/asans"
            android:textColor="@color/block"
            android:textSize="18sp"
            android:layout_marginLeft="12dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:background="#F3F3F2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/B"
            android:textSize="18sp"
            android:layout_marginLeft="26dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:background="#ffffff">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:src="@drawable/tu6"
            />
        <TextView
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:text="@string/buliangshaonian"
            android:textColor="@color/block"
            android:textSize="18sp"
            android:layout_marginLeft="12dp"/>
    </LinearLayout>
</LinearLayout>
