<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.massz.www.androidproject.home_page">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/home_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/weixin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="10dp"
            android:text="@string/weixin"
            android:textColor="@color/block"
            android:textSize="20sp" />

        <ImageView

            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/mores"
            android:layout_width="29dp"
            android:layout_height="24dp"
            android:src="@drawable/mores" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/home_search_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top"
        app:layout_constraintTop_toBottomOf="@id/home_header">

        <EditText
            android:id="@+id/sousuo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shapesousuo"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/sousuo"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/sousuo"
            android:textSize="14sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/home_footer"
        app:layout_constraintTop_toBottomOf="@id/home_search_wrapper"
        app:layout_constraintVertical_weight="1" />

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/home_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioGroup
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/xiaoxi"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/radioselect1"
                android:gravity="center"
                android:text="@string/weixin" />

            <RadioButton
                android:id="@+id/tongxun"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/radioselect2"
                android:gravity="center"
                android:text="@string/tongxunlu" />

            <RadioButton
                android:id="@+id/faxian"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/radioselect3"
                android:gravity="center"
                android:text="@string/faxian" />

            <RadioButton
                android:id="@+id/wo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/radioselect4"
                android:gravity="center"
                android:text="@string/wo" />
        </RadioGroup>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
