<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/body">
    <!--<TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faxian"
        android:textSize="21sp"
        android:textColor="#accd22"
        android:layout_gravity="center"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F3F3F2"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faxian"
            android:textSize="20sp"
            android:paddingTop="12dp"
            android:paddingBottom="10dp"
            android:textColor="@color/block"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/pengyouquan"
            />
        <!--<ImageView
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:src="@drawable/pengyouquan2"
            android:layout_marginLeft="8dp"
            />-->
        <TextView
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:text="@string/pengyouquan"
            android:textColor="@color/block"
            android:textSize="15sp"
            android:layout_marginLeft="11dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:background="#F3F3F2">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/saoyisao"
            />
        <!--<ImageView
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:src="@drawable/saoyisao2"
            android:layout_marginLeft="8dp"
            />-->
        <TextView
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:text="@string/saoyisao"
            android:textColor="@color/block"
            android:textSize="15sp"
            android:layout_marginLeft="11dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:background="#F3F3F2">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/xiaochengxu"
            />
        <!--<ImageView-->
            <!--android:layout_width="275dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/xiaochengxu2"-->
            <!--android:layout_marginLeft="8dp"-->
            <!--/>-->
        <TextView
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:text="@string/xiaochengxu"
            android:textColor="@color/block"
            android:textSize="15sp"
            android:layout_marginLeft="11dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right"/>
    </LinearLayout>
</LinearLayout>
